src/objects/Interview__c.object
<CustomObject>
    <fields>
        <fullName>CandidateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interviews (Candidate)</relationshipLabel>
        <relationshipName>Interviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Candidate Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompanyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conducted_Date__c</fullName>
        <label>Conducted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VacancyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vacancy</label>
        <referenceTo>Vacancy__c</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Interview</label>
    <nameField>
        <label>Interview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>